--- a/config/database.yml
+++ b/config/database.yml
@@ -1,11 +1,11 @@
 # SQLite version 3.x
 #   gem install sqlite3
 development:
-  adapter: mysql
+  adapter: postgresql
   host: localhost
-  port: 3306
+  port: 5432
   database: ktv01_dev
-  username: root
+  username: postgres
   password: root
   pool: 5
   timeout: 5000
