--- a/config/database.yml
+++ b/config/database.yml
@@ -1,12 +1,19 @@
 # SQLite version 3.x
 #   gem install sqlite3
+
+# development:
+  # adapter: postgresql
+  # host: localhost
+  # port: 5432
+  # database: ktv01_dev
+  # username: postgres
+  # password: root
+  # pool: 5
+  # timeout: 5000
+
 development:
-  adapter: postgresql
-  host: localhost
-  port: 5432
-  database: ktv01_dev
-  username: postgres
-  password: root
+  adapter: sqlite3
+  database: db/dev.sqlite3
   pool: 5
   timeout: 5000
 
