--- a/config/database.yml
+++ b/config/database.yml
@@ -1,21 +1,18 @@
-# SQLite version 3.x
-#   gem install sqlite3
-
-# development:
-  # adapter: postgresql
-  # host: localhost
-  # port: 5432
-  # database: ktv01_dev
-  # username: postgres
-  # password: root
-  # pool: 5
-  # timeout: 5000
-
 development:
-  adapter: sqlite3
-  database: db/dev.sqlite3
+  adapter: mysql
+  host: localhost
+  port: 3306
+  database: ktv01_dev
+  username: root
+  password: dharma
   pool: 5
   timeout: 5000
+
+# development:
+#  adapter: sqlite3
+#  database: db/dev.sqlite3
+#  pool: 5
+#  timeout: 5000
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
